--- a/Java/EclpiseAINeuralNetwork/.recommenders/caches/identified-project-coordinates.json
+++ b/Java/EclpiseAINeuralNetwork/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"F:\\AI\\Java\\EclpiseAINeuralNetwork\\BackPropgarationNeuralNetwork","type":"PROJECT","hints":{"PROJECT_NAME":"BackPropgarationNeuralNetwork"}},"ABSENT"]]
