--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 5_Machine_Learning_Project/2_Fashin_design/input/fashion-mnist_train.csv
+15_ML_Real_World/Chap1/Case_study Simple+Linear+Regression.ipynb
