--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 5_Machine_Learning_Project/2_Fashin_design/input/fashion-mnist_train.csv
 15_ML_Real_World/Chap1/Case_study Simple+Linear+Regression.ipynb
+11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered.zip
+11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/cats_and_dogs_filtered/
