--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 15_ML_Real_World/Chap1/Case_study Simple+Linear+Regression.ipynb
 11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered.zip
 11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/cats_and_dogs_filtered/
+11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/vectorize.py
+11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/
