--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/cats_and_dogs_filtered/
 11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/vectorize.py
 11_Tensorflow/Chap5_Tuning/cats_and_dogs_filtered/
+16_Nlp/Chap1/chatbot_weights.ckpt.data-00000-of-00001
+16_Nlp/Chap1/chatbot_weights.ckpt.index
+16_Nlp/Chap1/chatbot_weights.ckpt.meta
+16_Nlp/Chap1/checkpoint
