--- a/14_Deployment_Machince/4_project/packages/ml_api/requirements.txt
+++ b/14_Deployment_Machince/4_project/packages/ml_api/requirements.txt
@@ -1,6 +1,14 @@
+--extra-index-url=${PIP_EXTRA_INDEX_URL}
+
 # api
 flask==1.0.2
 
-# local regression_model package
-# update with your local path
--e "E:\AI\14_Deployment_Machince\4_project\packages\regression_model"
+# schema validation
+marshmallow==2.17.0
+
+# Install from gemfury
+regression-model==1.0.0
+neural_network_model==0.1.1
+
+# Deployment
+gunicorn==19.9.0
