--- a/14_Deployment_Machince/4_project/packages/neural_network_model/requirements.txt
+++ b/14_Deployment_Machince/4_project/packages/neural_network_model/requirements.txt
@@ -1,14 +1,18 @@
 # production requirements
-numpy==1.15.4
-scikit-learn==0.20.2
 pandas==0.23.4
+numpy==1.13.3
+scikit-learn==0.19.0
+Keras==2.1.3
+opencv-python==4.0.0.21
+h5py==2.9.0
+Theano==0.9.0
 
 # packaging
 setuptools==40.6.3
 wheel==0.32.3
 
 # testing requirements
-pytest>=4.6.6,<5.0.0
+pytest==4.0.2
 
 # fetching datasets
 kaggle==1.5.1.1
